# Pathly

./: .dockerignore  .env.example  .env.local.example  .gitignore  BACKEND_SETUP.md  Dockerfile.frontend  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json
app/: auth.css  globals.css  layout.tsx  page.tsx
app/_components/: app-sidebar.tsx
app/_hooks/: use-subjects.ts
app/_lib/: api.ts
app/account/: page.tsx
app/login/: page.tsx
app/login/forgot/: page.tsx
app/subjects/: page.tsx
app/support/: page.tsx
app/verify-email/: page.tsx
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260713_0001_initial.py  20260713_0002_remove_xp.py  20260715_0003_password_reset_and_verification.py
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  friends.py  health.py  learning.py  materials.py  progress.py  quizzes.py  study.py  subjects.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  chat.py  learning.py  material.py  progress.py  quiz.py  social.py  subject.py  user.py
backend/app/services/: __init__.py  chunking.py  exceptions.py  extraction.py  gemini.py  learning.py  mailer.py  materials.py  rag.py  storage.py  vector_store.py
backend/tests/: conftest.py  test_api.py  test_learning_engine.py  test_security.py  test_services.py
(+8 files in other folders)
