[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathly-api"
version = "0.1.0"
description = "FastAPI backend for the Pathly study platform"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "chromadb>=1.0,<2",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "google-auth[requests]>=2.38,<3",
  "google-genai>=1.0,<2",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "pwdlib[argon2]>=0.2,<1",
  "pypdf>=5.2,<7",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.20,<1",
  "python-pptx>=1.0,<2",
  "pyjwt>=2.10,<3",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP042"]
